// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Album Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1vgpzqt"
      role="article"
    >
      <div
        class="content svelte-1vgpzqt"
      >
        <span
          class="artwork svelte-1vgpzqt"
        >
          <img
            alt="./cover.jpg"
            class="h-full w-full rounded-sm svelte-hn7eai"
            height="256"
            loading="lazy"
            src="./cover.jpg"
            width="256"
          />
           
          
        </span>
         
        <p
          class="controls svelte-1vgpzqt"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1vgpzqt"
      >
        <h3
          class="svelte-1vgpzqt"
        >
          Diamonds on the inside
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          by 
          <a
            class="underlined"
            href="#/artist/1"
            onclick="event.stopPropagation()"
          >
            Ben Harper
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/2"
            onclick="event.stopPropagation()"
          >
            The Innocent Criminals
          </a>
          
           
        </h4>
      </header>
    </span>
  </div>
  
  
</section>
`;

exports[`Storyshots Components/Album Many Artists 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1vgpzqt"
      role="article"
    >
      <div
        class="content svelte-1vgpzqt"
      >
        <span
          class="artwork svelte-1vgpzqt"
        >
          <img
            alt="./cover.jpg"
            class="h-full w-full rounded-sm svelte-hn7eai"
            height="256"
            loading="lazy"
            src="./cover.jpg"
            width="256"
          />
           
          
        </span>
         
        <p
          class="controls svelte-1vgpzqt"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1vgpzqt"
      >
        <h3
          class="svelte-1vgpzqt"
        >
          Diamonds on the inside
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          by 
          <a
            class="underlined"
            href="#/artist/3"
            onclick="event.stopPropagation()"
          >
            Muse
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/4"
            onclick="event.stopPropagation()"
          >
            Perl Jam
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/4"
            onclick="event.stopPropagation()"
          >
            Joe Satriani
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/6"
            onclick="event.stopPropagation()"
          >
            Avenged Sevenfold
          </a>
          
           
        </h4>
      </header>
    </span>
  </div>
  
  
</section>
`;

exports[`Storyshots Components/Album No Artist 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1vgpzqt"
      role="article"
    >
      <div
        class="content svelte-1vgpzqt"
      >
        <span
          class="artwork svelte-1vgpzqt"
        >
          <img
            alt="./cover.jpg"
            class="h-full w-full rounded-sm svelte-hn7eai"
            height="256"
            loading="lazy"
            src="./cover.jpg"
            width="256"
          />
           
          
        </span>
         
        <p
          class="controls svelte-1vgpzqt"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1vgpzqt"
      >
        <h3
          class="svelte-1vgpzqt"
        >
          Diamonds on the inside
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
           
        </h4>
      </header>
    </span>
  </div>
  
  
</section>
`;

exports[`Storyshots Components/Album Unknown 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-1vgpzqt"
      role="article"
    >
      <div
        class="content svelte-1vgpzqt"
      >
        <span
          class="artwork svelte-1vgpzqt"
        >
          <img
            class="h-full w-full rounded-sm hidden svelte-hn7eai"
            height="256"
            loading="lazy"
            width="256"
          />
           
          <span
            class="h-full w-full svelte-hn7eai rounded-sm"
          >
            <i
              class="material-icons svelte-hn7eai"
            >
              music_note
            </i>
          </span>
          
        </span>
         
        <p
          class="controls svelte-1vgpzqt"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-1vgpzqt"
      >
        <h3
          class="svelte-1vgpzqt"
        >
          Unknown
        </h3>
         
        <h4
          class="svelte-1fiafx9"
          slot="details"
        >
          by 
          <a
            class="underlined"
            href="#/artist/1"
            onclick="event.stopPropagation()"
          >
            Ben Harper
          </a>
          , 
          <a
            class="underlined"
            href="#/artist/2"
            onclick="event.stopPropagation()"
          >
            The Innocent Criminals
          </a>
          
           
        </h4>
      </header>
    </span>
  </div>
  
  
</section>
`;
